[FIX] sap.m.ObjectStatus: icon isn't clipped in a table cell now
- The control icon isn't clipped in a table cell,
when users use borwser zoom in or out.

CR-Id: 002075125900000823902021
BCP: 2080400658

--- a/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectStatus.less
@@ -251,7 +251,7 @@
 }
 
 .sapUiTableCell .sapMObjStatusIcon > .sapUiIcon {
-	line-height: 1rem;
+	line-height: normal;
 }
 
 .sapMObjectStatusLarge .sapMObjStatusIcon > .sapUiIcon {
